test/errors/compatibility_error/zs/wrong_compatibility_version_format_error.zs
// Test that comment is ok
zserio_compatibility_version("2.5.0-rc1"); // zserio uses *-pre1 instead of *-rc1

package wrong_compatibility_version_format_error;
